--- a/src/layouts/AuthLayout.astro
+++ b/src/layouts/AuthLayout.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css";
 interface Props {
     title: string;
 }
@@ -16,10 +17,6 @@ const { title } = Astro.props;
     </head>
     <body>
         <!-- component -->
-        <link
-            href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
-            rel="stylesheet"
-        />
         <div
             class="bg-no-repeat bg-cover bg-center relative"
             style="background-image: url(https://images.unsplash.com/photo-1579621970563-ebec7560ff3e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1951&q=80);"
