Update Astro configuration to include @astrojs/node adapter for server output, add Google login functionality, and implement logout action. Enhance middleware for authentication checks and update login page with Google sign-in button.

--- a/src/layouts/AuthLayout.astro
+++ b/src/layouts/AuthLayout.astro
@@ -32,7 +32,7 @@ const { title } = Astro.props;
                     <div class="self-start hidden lg:flex flex-col text-white">
                         <img src="" class="mb-3" />
                         <h1 class="mb-3 font-bold text-5xl">
-                            Hi ? Welcome Back Aji
+                            Hi ? Welcome Back
                         </h1>
                         <p class="pr-3">
                             Lorem ipsum is placeholder text commonly used in the
